# stage_ros2

./: .gitignore  README.md
src/: stage_ros2.cc
stage_ros2/: CMakeLists.txt  package.xml
stage_ros2/include/: model_server.hpp  robot_wrapper.hpp  stage_forward_declarations.hpp  utils.hpp
stage_ros2/include/stage_ros2/: camera_wrapper.hpp  fiducial_wrapper.hpp  model_server.hpp  model_wrapper.hpp  position_wrapper.hpp  ranger_wrapper.hpp  robot_wrapper.hpp  stage_forward_declarations.hpp  utils.hpp
stage_ros2/launch/: stage_ros2_launch.xml
stage_ros2/src/: camera_wrapper.cc  converting_landmarks.cpp  fiducial_wrapper.cc  model_server.cc  model_wrapper.cc  position_wrapper.cc  ranger_wrapper.cc  robot_wrapper.cc  stage_ros2.cc  utils.cc
stage_ros2_examples/: package.xml  setup.cfg  setup.py
stage_ros2_examples/launch/: factory.launch
stage_ros2_examples/stage_ros2_examples/: factory_control.py
stage_ros2_examples/worlds/: factory.world
stage_ros2_itfs/: CMakeLists.txt  LICENSE  package.xml
stage_ros2_itfs/action/: MoveModel.action
stage_ros2_itfs/srv/: CreateModel.srv  RemoveModel.srv  RemoveModels.srv
