<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>stage_ros2</name>
    <version>0.0.0</version>
    <description>ROS 2 node wrapping the Stage simulator</description>

    <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
    <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
    <author email="a.verma@arti-robots.com">Amardeep Verma</author>
    <author email="world.applepie@gmail.com">ymd-stella</author>

    <license>GPL</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rcutils</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>mrpt_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>stage_ros2_itfs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <!--
        colcon's build order resolution algorithm is case-sensitive when handling package names.
        Because Stage is pure CMake project, colcon uses its project name (which is `Stage`)
        as the package name. Thus using `<depend>Stage</depend>` would NOT work.
    -->
    <depend>Stage</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
