<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stage_ros2_examples</name>
  <version>0.0.0</version>
  <description>Examples of using stage_ros2</description>
  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
  <license>BSD</license>

  <depend>stage_ros2</depend>
  <depend>stage_ros2_itfs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
